Chat messages light grey/mod messages white
Changed it so normal players chat with grey text and moderators chat in white text. It also adds a bold italic MOD prefix to your name if you have the Permission.MODERATOR.

--- a/plugin.yml
+++ b/plugin.yml
@@ -7,7 +7,7 @@ description: >
 commands:
   uhc:
     description: Gamemode 4 UHC
-    permission: gm4.mod
+    permission: uhc.mod
   gm4:
     description: Gamemode 4 UHC
-    permission: gm4.mod
+    permission: uhc.mod
