--- a/plugin.yml
+++ b/plugin.yml
@@ -1,10 +1,12 @@
 name: GM4UHC
 main: co.gm4.uhc.GM4UHC
 authors: [MrSugarCaney]
-version: '0.16'
+version: '0.18'
 description: >
              Gamemode 4 UHC plugin
 commands:
+  silence:
+    description: Only show mod messages.
   mute:
     description: (Un)mutes a player.
     permission: uhc.mod
