Added accent support for team colours.
Team colours can now have a colour and an optional style: ITALIC, UNDERLINE, BOLD, STRIKETHROUGH and MAGIC.

--- a/config.yml
+++ b/config.yml
@@ -10,8 +10,10 @@ teams:
     - example_member_1
     - example_member_2
     color: "GREEN"
+    accent: ""
   example_team_2:
     members:
     - example_member_3
     - example_member_4
     color: "GOLD"
+    accent: "ITALIC"
