Added /teamcolour command.
[A[A[[C[C[De[D[Deam colours can now be changed. Aliases: /tc, /ta, /teamaccent and more. Also hearts and NP will show up in tab representing respectively your health and the NOT-PLAYING status.

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,10 +1,14 @@
 name: GM4UHC
 main: co.gm4.uhc.GM4UHC
 authors: [MrSugarCaney]
-version: '0.25'
+version: '0.26'
 description: >
              Gamemode 4 UHC plugin
 commands:
+  teamcolour:
+    description: Changes the colour of a player's team.
+    permission: uhc.mod
+    aliases: [tc, teamc, teamcolor, ta, teama, teamaccent]
   team:
     description: Puts all the given players in a team.
     permission: uhc.mod
