--- a/plugin.yml
+++ b/plugin.yml
@@ -1,10 +1,14 @@
 name: GM4UHC
 main: co.gm4.uhc.GM4UHC
 authors: [MrSugarCaney]
-version: '0.26'
+version: '0.27'
 description: >
              Gamemode 4 UHC plugin
 commands:
+  colours:
+    description: Shows a list of all available colours and accents.
+    permission: uhc.mod
+    aliases: [colors, accents]
   teamcolour:
     description: Changes the colour of a player's team.
     permission: uhc.mod
