Added remove command. Changed NP to SP in tab.
/remove will remove a certain player from their team: so they will become spectator. Aliases: /tr (teamremove), /rem. Also NP from Not Playing replaced by SP (spectator) in the tab list.

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,10 +1,14 @@
 name: GM4UHC
 main: co.gm4.uhc.GM4UHC
 authors: [MrSugarCaney]
-version: '0.27'
+version: '0.28'
 description: >
              Gamemode 4 UHC plugin
 commands:
+  remove:
+    description: Removes a player from their team.
+    permission: uhc.mod
+    aliases: [rem, tr]
   colours:
     description: Shows a list of all available colours and accents.
     permission: uhc.mod
