--- a/plugin.yml
+++ b/plugin.yml
@@ -1,10 +1,13 @@
 name: GM4UHC
 main: co.gm4.uhc.GM4UHC
 authors: [MrSugarCaney]
-version: '0.28'
+version: '0.29'
 description: >
              Gamemode 4 UHC plugin
 commands:
+  teamlist:
+    description: Shows a list with all teams.
+    aliases: [tlist,tl]
   remove:
     description: Removes a player from their team.
     permission: uhc.mod
