--- a/plugin.yml
+++ b/plugin.yml
@@ -1,10 +1,13 @@
 name: GM4UHC
 main: co.gm4.uhc.GM4UHC
 authors: [MrSugarCaney]
-version: '0.29'
+version: '0.30'
 description: >
              Gamemode 4 UHC plugin
 commands:
+  teamless:
+    description: Shows who aren't in a team.
+    aliases: [tless, noteam]
   teamlist:
     description: Shows a list with all teams.
     aliases: [tlist,tl]
