--- a/plugin.yml
+++ b/plugin.yml
@@ -1,10 +1,14 @@
 name: GM4UHC
 main: co.gm4.uhc.GM4UHC
 authors: [MrSugarCaney]
-version: '0.48'
+version: '0.49'
 description: >
              Gamemode 4 UHC plugin
 commands:
+  close:
+    description: Closes the server; all players will be spectators.
+    permission: uhc.mod
+    usage: /close
   start:
     description: Starts the countdown and the match itself.
     permission: uhc.mod
