Added /warn command.
When a player receives a set amount of warnings they will die. Usage: /
warn <player> <reason>

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,10 +1,14 @@
 name: GM4UHC
 main: co.gm4.uhc.GM4UHC
 authors: [MrSugarCaney]
-version: '0.62'
+version: '0.63'
 description: >
              Gamemode 4 UHC plugin
 commands:
+  warn:
+    description: Warns a player.
+    permission: uhc.mod
+    usage: /warn <player> <reason>
   die:
     description: Removes a player from the game.
     permission: uhc.mod
