Fixed nether not being in the right world +...
.../shout command now has other layout.

--- a/config.yml
+++ b/config.yml
@@ -116,7 +116,7 @@ banned-words:
 - fucks
 - Fudge Packer
 - fuk
-- fk
+- fku
 - fuuck
 - Fukah
 - Fuken
@@ -409,9 +409,7 @@ banned-words:
 - gay
 - gook
 - guiena
-- h0r
 - h4x0r
-- hell
 - helvete
 - hoer
 - honkey
