Fixed lobby spawn not properly loading.

--- a/config.yml
+++ b/config.yml
@@ -64,7 +64,6 @@ banned-words:
 - buttwipe
 - c0ck
 - c0cks
-- c0k
 - Carpet Muncher
 - cawk
 - cawks
@@ -546,3 +545,12 @@ banned-words:
 - fuuck
 - fuuk
 - fck
+- ballbag
+- balbag
+- balsack
+- ballsack
+- balsak
+- ballsak
+- balsac
+- ballsak
+- yo mama is so fat
