--- a/config.yml
+++ b/config.yml
@@ -40,7 +40,7 @@ banned-words:
 - ash0les
 - asholes
 - ass
-- Ass Monkey
+- AssMonkey
 - Assface
 - assh0le
 - assh0lez
@@ -58,13 +58,13 @@ banned-words:
 - Biatch
 - bitch
 - bitches
-- Blow Job
+- blowjob
 - boffing
 - butthole
 - buttwipe
 - c0ck
 - c0cks
-- Carpet Muncher
+- CarpetMuncher
 - cawk
 - cawks
 - Clit
@@ -93,8 +93,6 @@ banned-words:
 - dominatrix
 - dyke
 - enema
-- f u c k
-- f u c k e r
 - fag
 - fag1t
 - faget
@@ -107,13 +105,13 @@ banned-words:
 - faig
 - faigs
 - fart
-- flipping the bird
+- flippingthebird
 - fuck
 - fucker
 - fuckin
 - fucking
 - fucks
-- Fudge Packer
+- FudgePacker
 - fuk
 - fku
 - fuuck
@@ -166,21 +164,22 @@ banned-words:
 - masterbaiter
 - masterbate
 - masterbates
-- Motha Fucker
-- Motha Fuker
-- Motha Fukkah
-- Motha Fukker
-- Mother Fucker
-- Mother Fukah
-- Mother Fuker
-- Mother Fukkah
-- Mother Fukker
-- mother-fucker
-- Mutha Fucker
-- Mutha Fukah
-- Mutha Fuker
-- Mutha Fukkah
-- Mutha Fukker
+- moederneuker
+- mothafucker
+- mothafuker
+- mothafukkah
+- mothafukker
+- motherfucker
+- motherfukah
+- motherfuker
+- motherfukkah
+- motherfukker
+- motherfucker
+- muthafucker
+- muthafukah
+- muthafuker
+- muthafukkah
+- muthafukker
 - n1gr
 - nastt
 - nigger;
@@ -270,7 +269,7 @@ banned-words:
 - sluts
 - Slutty
 - slutz
-- son-of-a-bitch
+- sonofabitch
 - tit
 - turd
 - va1jina
@@ -329,7 +328,6 @@ banned-words:
 - masterbat
 - masterbat3
 - motherfucker
-- s.o.b.
 - mofo
 - nazi
 - nigga
@@ -553,5 +551,5 @@ banned-words:
 - ballsak
 - balsac
 - ballsak
-- yo mama is so fat
+- yomama
 - fucer
